--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+*.env
+env.*
+node_modules
+
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
