--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.10",
+    "eslint-config-prettier": "^8.5.0",
+    "joi": "^17.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.31.2",
-    "yup": "^0.32.11"
+    "react-hook-form": "^7.31.2"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
